--- a/ETL_EDA/tests.ipynb
+++ b/ETL_EDA/tests.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4              5  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,30 +214,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "budget                    int64\n",
-       "popularity              float64\n",
-       "release_date     datetime64[ns]\n",
-       "revenue                   int64\n",
-       "status                   object\n",
-       "title                    object\n",
-       "vote_average            float64\n",
-       "vote_count                int64\n",
-       "release_year              int64\n",
-       "return                  float64\n",
-       "actors                   object\n",
-       "directors                object\n",
-       "release_day              object\n",
-       "release_month             int64\n",
+       "budget             int64\n",
+       "popularity       float64\n",
+       "release_date       int64\n",
+       "revenue            int64\n",
+       "status            object\n",
+       "title             object\n",
+       "vote_average     float64\n",
+       "vote_count         int64\n",
+       "release_year       int64\n",
+       "return           float64\n",
+       "actors            object\n",
+       "directors         object\n",
+       "release_day       object\n",
+       "release_month      int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
       "{'mes': 'noviembre', 'cantidad': '3629'}\n",
       "{'mes': 'diciembre', 'cantidad': '3766'}\n",
       "Debe ingresar un mes válido del año, por ejemplo: enero\n",
-      "Debe ingresar un mes del año, por ejemplo: enero\n"
+      "Debe ingresar un texto, por ejemplo, por ejemplo: enero\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "'La pelicula no se encuentra en la base de datos'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        " 'retorno_promedio': 0.9942087194349999}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
     "                revenue.append(df_movie['revenue'][index])\n",
     "\n",
     "    return {'director':nombre_director, 'retorno_total_director':total_return, \n",
-    "    'peliculas':movies, 'anio':years, 'retorno_pelicula':_return, \n",
+    "    'peliculas':movies, 'año':years, 'retorno_pelicula':_return, \n",
     "    'budget_pelicula':budget, 'revenue_pelicula':revenue}"
    ]
   },
@@ -620,20 +620,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4143268245.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [164]\u001b[1;36m\u001b[0m\n\u001b[1;33m    get_director(23452&&34)\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'director': 'Stephen Hopkins',\n",
+       " 'retorno_total_director': 14.145571503200001,\n",
+       " 'peliculas': ['Judgment Night',\n",
+       "  'Predator 2',\n",
+       "  'Blown Away',\n",
+       "  'The Reaping',\n",
+       "  'Lost in Space',\n",
+       "  'A Nightmare on Elm Street 5: The Dream Child',\n",
+       "  'Under Suspicion',\n",
+       "  'The Ghost and the Darkness',\n",
+       "  'The Life and Death of Peter Sellers',\n",
+       "  'Tube Tales',\n",
+       "  'Thorne: Sleepyhead',\n",
+       "  'Race'],\n",
+       " 'anio': [1993,\n",
+       "  1990,\n",
+       "  1994,\n",
+       "  2007,\n",
+       "  1998,\n",
+       "  1989,\n",
+       "  2000,\n",
+       "  1996,\n",
+       "  2004,\n",
+       "  1999,\n",
+       "  2010,\n",
+       "  2016],\n",
+       " 'retorno_pelicula': [0.0,\n",
+       "  1.6320090857,\n",
+       "  0.0,\n",
+       "  1.5692764750000001,\n",
+       "  1.7019927875,\n",
+       "  2.7710448750000003,\n",
+       "  0.01042248,\n",
+       "  1.5,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  4.9608258],\n",
+       " 'budget_pelicula': [0,\n",
+       "  35000000,\n",
+       "  0,\n",
+       "  40000000,\n",
+       "  80000000,\n",
+       "  8000000,\n",
+       "  25000000,\n",
+       "  50000000,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  5000000],\n",
+       " 'revenue_pelicula': [12136938,\n",
+       "  57120318,\n",
+       "  30156002,\n",
+       "  62771059,\n",
+       "  136159423,\n",
+       "  22168359,\n",
+       "  260562,\n",
+       "  75000000,\n",
+       "  0,\n",
+       "  0,\n",
+       "  0,\n",
+       "  24804129]}"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_director(23452&&34)"
+    "get_director('Stephen Hopkins')"
    ]
   }
  ],
