--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2601,10 +2601,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_movies.to_csv('../Data/api.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movies = pd.read_csv('../Data/api.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "budget           float64\n",
+       "popularity       float64\n",
+       "release_date      object\n",
+       "revenue          float64\n",
+       "status            object\n",
+       "title             object\n",
+       "vote_average     float64\n",
+       "vote_count       float64\n",
+       "release_year       int64\n",
+       "return           float64\n",
+       "actors            object\n",
+       "directors         object\n",
+       "release_day       object\n",
+       "release_month      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_movies.dtypes"
+   ]
   }
  ],
  "metadata": {
