--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guill\\AppData\\Local\\Temp\\ipykernel_17976\\95153632.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\guill\\AppData\\Local\\Temp\\ipykernel_4444\\95153632.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_movies = pd.read_csv('../Dataset/movies_dataset.csv',delimiter=',')\n"
      ]
     },
@@ -258,7 +258,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "['1', '12', '22']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "0     NaN  Toy Story           7.7      5415.0          1995  12.451801  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released    Jumanji  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "4  [United States of America]            [English]  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "5                 Four Rooms           6.5       539.0          1995   1.075  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
        "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "[45476 rows x 3 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,17 +1713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cambia el nombre de las columnas cast y crew por actors y directors\n",
-    "df_movies.rename(columns={'cast': 'actors','crew':'directors'},inplace=True)"
+    "df_credits.rename(columns={'cast': 'actors','crew':'directors'},inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,30 +1733,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "budget              0\n",
-       "popularity          0\n",
-       "release_date        0\n",
-       "revenue             0\n",
-       "status             80\n",
-       "title               0\n",
-       "vote_average        0\n",
-       "vote_count          0\n",
-       "release_year        0\n",
-       "return              0\n",
-       "actors           2354\n",
-       "directors         723\n",
-       "release_day         0\n",
-       "release_month       0\n",
+       "belongs_to_collection    40954\n",
+       "budget                       0\n",
+       "genres                    2384\n",
+       "original_language           11\n",
+       "overview                   941\n",
+       "popularity                   0\n",
+       "production_companies     11817\n",
+       "production_countries      6219\n",
+       "release_date                 0\n",
+       "revenue                      0\n",
+       "runtime                    246\n",
+       "spoken_languages          3774\n",
+       "status                      80\n",
+       "tagline                  25026\n",
+       "title                        0\n",
+       "vote_average                 0\n",
+       "vote_count                   0\n",
+       "release_year                 0\n",
+       "return                       0\n",
+       "actors                    2354\n",
+       "directors                  723\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1767,13 +1774,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Utiliza la funcion 'to_csv' de pandas para guardar en un archivo csv el dataframe 'df_movies'.\n",
-    "#df_movies.to_csv('../Data/Data_final.csv', index=False)\n",
-    "#df_movies.to_json('../Data/Data_final.json', orient='records')\n",
+    "df_movies.to_csv('../Data/Data_final.csv', index=False)\n",
+    "df_movies.to_json('../Data/Data_final.json', orient='records')\n",
     "df_movies.to_pickle('../Data/Data_final.pickle')"
    ]
   },
@@ -1795,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1855,14 +1862,14 @@
        "vote_count              float64\n",
        "release_year              int64\n",
        "return                  float64\n",
-       "cast                     object\n",
-       "crew                     object\n",
+       "actors                   object\n",
+       "directors                object\n",
        "release_day              object\n",
        "release_month             int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1889,14 +1896,14 @@
        "vote_count          0\n",
        "release_year        0\n",
        "return              0\n",
-       "cast             2354\n",
-       "crew              723\n",
+       "actors           2354\n",
+       "directors         723\n",
        "release_day         0\n",
        "release_month       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,8 +1918,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_movies.to_csv('../Data/api.csv', index=False)\n",
-    "#df_movies.to_json('../Data/api.json', orient='records')\n",
+    "df_movies.to_csv('../Data/api.csv', index=False)\n",
+    "df_movies.to_json('../Data/api.json', orient='records')\n",
     "df_movies.to_pickle('../Data/api.pickle')"
    ]
   },
